# ci-rs

./: Cargo.toml
src/: core.rs  docker.rs  main.rs
src/core/: build.rs
src/docker/: container.rs  errors.rs  read.rs  uri.rs  utils.rs
