[package]
name = "ci-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
derive-new = "0.5"
thiserror = "1.0"
nonempty = "0.10.0"
serde_json = "1.0"
serde = "1.0.197"
serde_derive = "1.0.197"
serde_repr = "0.1.6"
serde_urlencoded = "0.7"
serde_with = { version = "3.0", default-features = false, features = ["std"] }
hex = "0.4.2"
tokio = { version = "1.36.0", features = ["full"] }
# reqwest = { version = "0.11.24", features = ["json", "blocking"] }
# hyper = { version = "1.2.0", features = ["full"] }
# hyperlocal = "0.8.0"
# hyper-util = { version = "0.1.3", features = ["full"] }
rustls = { version = "0.22", optional = true, features = ["ring"] }
rustls-native-certs = { version = "0.7.0", optional = true }
rustls-pemfile = { version = "2.0", optional = true }
rustls-pki-types = { version = "1.1", optional = true }
# 
home = { version = "0.5", optional = true }
http = "1.0"
http-body-util = "0.1.0"
hyper = { version = "1", features = ["client", "http1"] }
hyper-rustls = { version = "0.26", optional = true }
hyper-util = { version = "0.1.2", features = [
    "http1",
    "client-legacy",
    "tokio",
] }
# 
futures-core = "0.3"
futures-util = "0.3"
# 
tokio-util = { version = "0.7", features = ["codec"] }
tower-service = { version = "0.3", optional = true }
url = "2.2"
# 
[target.'cfg(unix)'.dependencies]
hyperlocal-next = { version = "0.9.0" }
#
bollard-buildkit-proto = "0.3.0"
bollard-stubs = "1.41.0"
# 
pin-project-lite = "0.2.8"
num = { version = "0.4", optional = true }
rand = { version = "0.8", optional = true }
